--- a/Data.ipynb
+++ b/Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 239,
    "id": "facial-button",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 240,
    "id": "optional-numbers",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 241,
    "id": "elect-victor",
    "metadata": {},
    "outputs": [],
@@ -68,34 +68,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 242,
    "id": "usual-adrian",
    "metadata": {},
    "outputs": [],
    "source": [
-    "atime = 275.036 # start the data\n",
+    "# atime = 275.036 # start the data\n",
+    "atime = time[60000]\n",
     "btime = 595"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 243,
    "id": "located-english",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.06146778 0.06052634 0.06451372 0.071417   0.07229017]\n",
-      "[0.00107282 0.00105638 0.00112598 0.00124646 0.0012617 ]\n",
-      "[-0.04278078 -0.04276823 -0.04215042 -0.04583811 -0.04424571]\n",
-      "[-0.4192516  -0.41912864 -0.41307414 -0.44921352 -0.43360798]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = pd.DataFrame(x[(x[:,0] >= atime) & (x[:,0] <= btime)], columns=['time', 'x'])\n",
+    "df['x'] -= df['x'][0] # shift coordinate to start at 0\n",
+    "df['x'] *= -1\n",
+    "df['time'] -= df['time'][0]\n",
     "data = [y, psi, vx, vy, r, steer, D, real_ax, real_ay]\n",
     "labels = ['y', 'psi', 'vx', 'vy', 'r', 'steer', 'D', 'real_ax', 'real_ay']\n",
     "\n",
@@ -116,16 +109,15 @@
     "    \n",
     "    if label == 'steer':\n",
     "        # multiply pi/180 to get rad\n",
-    "        print(values[:5])\n",
     "        values *= math.pi / 180\n",
-    "        print(values[:5])\n",
     "    elif label == 'D':\n",
     "        # multiple by 9.8 to get m/s^2\n",
-    "        print(values[:5])\n",
     "        values *= 9.8\n",
-    "        print(values[:5])\n",
     "    elif label == 'psi':\n",
-    "        values += math.pi/2\n",
+    "        values += math.pi * 1.12\n",
+    "    elif label == 'y':\n",
+    "        values -= values[0]\n",
+    "\n",
     "    \n",
     "    df[labels[i]] = time_cut_data[:,1] # now extract the actual column value\n",
     "    \n",
@@ -134,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 233,
    "id": "instrumental-separate",
    "metadata": {},
    "outputs": [
@@ -175,73 +167,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>275.036</td>\n",
-       "      <td>-101.308861</td>\n",
-       "      <td>19.530313</td>\n",
-       "      <td>-0.996066</td>\n",
-       "      <td>14.049075</td>\n",
-       "      <td>0.064813</td>\n",
-       "      <td>-0.00306</td>\n",
-       "      <td>0.001073</td>\n",
-       "      <td>-0.419252</td>\n",
-       "      <td>-0.2477</td>\n",
-       "      <td>0.5202</td>\n",
+       "      <td>469.916</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.521288</td>\n",
+       "      <td>20.914034</td>\n",
+       "      <td>0.033644</td>\n",
+       "      <td>-0.01642</td>\n",
+       "      <td>0.000719</td>\n",
+       "      <td>-0.254461</td>\n",
+       "      <td>-0.2095</td>\n",
+       "      <td>0.2194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>275.076</td>\n",
-       "      <td>-101.002190</td>\n",
-       "      <td>19.059580</td>\n",
-       "      <td>-0.996167</td>\n",
-       "      <td>14.046067</td>\n",
-       "      <td>0.070796</td>\n",
-       "      <td>-0.00887</td>\n",
-       "      <td>0.001056</td>\n",
-       "      <td>-0.419129</td>\n",
-       "      <td>-0.1003</td>\n",
-       "      <td>0.1653</td>\n",
+       "      <td>469.956</td>\n",
+       "      <td>-0.689575</td>\n",
+       "      <td>0.474304</td>\n",
+       "      <td>2.520757</td>\n",
+       "      <td>20.925581</td>\n",
+       "      <td>0.040599</td>\n",
+       "      <td>-0.01548</td>\n",
+       "      <td>0.001095</td>\n",
+       "      <td>-0.271038</td>\n",
+       "      <td>0.3387</td>\n",
+       "      <td>-0.4859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>275.116</td>\n",
-       "      <td>-100.695587</td>\n",
-       "      <td>18.588818</td>\n",
-       "      <td>-0.996376</td>\n",
-       "      <td>14.046994</td>\n",
-       "      <td>0.067643</td>\n",
-       "      <td>-0.00909</td>\n",
-       "      <td>0.001126</td>\n",
-       "      <td>-0.413074</td>\n",
-       "      <td>-0.0117</td>\n",
-       "      <td>0.0054</td>\n",
+       "      <td>469.996</td>\n",
+       "      <td>-1.379486</td>\n",
+       "      <td>0.948502</td>\n",
+       "      <td>2.520299</td>\n",
+       "      <td>20.920303</td>\n",
+       "      <td>0.033280</td>\n",
+       "      <td>-0.01133</td>\n",
+       "      <td>0.001457</td>\n",
+       "      <td>-0.306820</td>\n",
+       "      <td>-0.2400</td>\n",
+       "      <td>-0.1717</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>275.156</td>\n",
-       "      <td>-100.389305</td>\n",
-       "      <td>18.117285</td>\n",
-       "      <td>-0.996648</td>\n",
-       "      <td>14.055491</td>\n",
-       "      <td>0.059404</td>\n",
-       "      <td>-0.01306</td>\n",
-       "      <td>0.001246</td>\n",
-       "      <td>-0.449214</td>\n",
-       "      <td>-0.0894</td>\n",
-       "      <td>-0.0761</td>\n",
+       "      <td>470.036</td>\n",
+       "      <td>-2.069550</td>\n",
+       "      <td>1.422333</td>\n",
+       "      <td>2.519940</td>\n",
+       "      <td>20.923943</td>\n",
+       "      <td>0.040129</td>\n",
+       "      <td>0.00004</td>\n",
+       "      <td>0.001808</td>\n",
+       "      <td>-0.256734</td>\n",
+       "      <td>0.3106</td>\n",
+       "      <td>-0.4829</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>275.196</td>\n",
-       "      <td>-100.082977</td>\n",
-       "      <td>17.645878</td>\n",
-       "      <td>-0.996736</td>\n",
-       "      <td>14.051016</td>\n",
-       "      <td>0.066986</td>\n",
-       "      <td>0.00144</td>\n",
-       "      <td>0.001262</td>\n",
-       "      <td>-0.433608</td>\n",
-       "      <td>-0.0839</td>\n",
-       "      <td>0.5010</td>\n",
+       "      <td>470.076</td>\n",
+       "      <td>-2.759766</td>\n",
+       "      <td>1.896225</td>\n",
+       "      <td>2.519658</td>\n",
+       "      <td>20.925726</td>\n",
+       "      <td>0.038360</td>\n",
+       "      <td>-0.00244</td>\n",
+       "      <td>0.002118</td>\n",
+       "      <td>-0.289739</td>\n",
+       "      <td>-0.1916</td>\n",
+       "      <td>-0.7657</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -258,111 +250,111 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7995</th>\n",
+       "      <th>3123</th>\n",
        "      <td>594.836</td>\n",
-       "      <td>-167.020935</td>\n",
-       "      <td>120.190155</td>\n",
-       "      <td>-0.995324</td>\n",
+       "      <td>-139.352295</td>\n",
+       "      <td>351.868683</td>\n",
+       "      <td>0.924539</td>\n",
        "      <td>13.627166</td>\n",
        "      <td>0.029047</td>\n",
        "      <td>-0.02381</td>\n",
-       "      <td>-0.002339</td>\n",
-       "      <td>-4.265322</td>\n",
+       "      <td>-0.002387</td>\n",
+       "      <td>-4.272755</td>\n",
        "      <td>-5.6695</td>\n",
        "      <td>-0.0485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7996</th>\n",
+       "      <th>3124</th>\n",
        "      <td>594.876</td>\n",
-       "      <td>-166.724564</td>\n",
-       "      <td>119.735992</td>\n",
-       "      <td>-0.996354</td>\n",
+       "      <td>-139.648666</td>\n",
+       "      <td>351.414520</td>\n",
+       "      <td>0.923508</td>\n",
        "      <td>13.422322</td>\n",
        "      <td>0.042470</td>\n",
        "      <td>-0.02686</td>\n",
-       "      <td>-0.001983</td>\n",
-       "      <td>-4.274560</td>\n",
+       "      <td>-0.001995</td>\n",
+       "      <td>-4.264626</td>\n",
        "      <td>-4.9157</td>\n",
        "      <td>0.0203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7997</th>\n",
+       "      <th>3125</th>\n",
        "      <td>594.916</td>\n",
-       "      <td>-166.433014</td>\n",
-       "      <td>119.288536</td>\n",
-       "      <td>-0.997426</td>\n",
+       "      <td>-139.940216</td>\n",
+       "      <td>350.967064</td>\n",
+       "      <td>0.922436</td>\n",
        "      <td>13.224626</td>\n",
        "      <td>0.034855</td>\n",
        "      <td>-0.02117</td>\n",
-       "      <td>-0.001433</td>\n",
-       "      <td>-4.278177</td>\n",
+       "      <td>-0.001501</td>\n",
+       "      <td>-4.272468</td>\n",
        "      <td>-5.2175</td>\n",
        "      <td>-0.7925</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7998</th>\n",
+       "      <th>3126</th>\n",
        "      <td>594.956</td>\n",
-       "      <td>-166.146347</td>\n",
-       "      <td>118.847389</td>\n",
-       "      <td>-0.998371</td>\n",
+       "      <td>-140.226883</td>\n",
+       "      <td>350.525917</td>\n",
+       "      <td>0.921492</td>\n",
        "      <td>13.019039</td>\n",
        "      <td>0.037049</td>\n",
        "      <td>-0.01664</td>\n",
-       "      <td>-0.000933</td>\n",
-       "      <td>-4.222267</td>\n",
+       "      <td>-0.001037</td>\n",
+       "      <td>-4.236550</td>\n",
        "      <td>-5.6539</td>\n",
        "      <td>0.3684</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7999</th>\n",
+       "      <th>3127</th>\n",
        "      <td>594.996</td>\n",
-       "      <td>-165.864517</td>\n",
-       "      <td>118.413170</td>\n",
-       "      <td>-0.998917</td>\n",
+       "      <td>-140.508713</td>\n",
+       "      <td>350.091698</td>\n",
+       "      <td>0.920945</td>\n",
        "      <td>12.801240</td>\n",
        "      <td>0.051131</td>\n",
        "      <td>-0.01218</td>\n",
-       "      <td>-0.000684</td>\n",
-       "      <td>-4.165312</td>\n",
+       "      <td>-0.000687</td>\n",
+       "      <td>-4.170835</td>\n",
        "      <td>-5.8320</td>\n",
        "      <td>0.4159</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8000 rows × 11 columns</p>\n",
+       "<p>3128 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "         time           x           y       psi         vx        vy        r  \\\n",
-       "0     275.036 -101.308861   19.530313 -0.996066  14.049075  0.064813 -0.00306   \n",
-       "1     275.076 -101.002190   19.059580 -0.996167  14.046067  0.070796 -0.00887   \n",
-       "2     275.116 -100.695587   18.588818 -0.996376  14.046994  0.067643 -0.00909   \n",
-       "3     275.156 -100.389305   18.117285 -0.996648  14.055491  0.059404 -0.01306   \n",
-       "4     275.196 -100.082977   17.645878 -0.996736  14.051016  0.066986  0.00144   \n",
+       "0     469.916   -0.000000    0.000000  2.521288  20.914034  0.033644 -0.01642   \n",
+       "1     469.956   -0.689575    0.474304  2.520757  20.925581  0.040599 -0.01548   \n",
+       "2     469.996   -1.379486    0.948502  2.520299  20.920303  0.033280 -0.01133   \n",
+       "3     470.036   -2.069550    1.422333  2.519940  20.923943  0.040129  0.00004   \n",
+       "4     470.076   -2.759766    1.896225  2.519658  20.925726  0.038360 -0.00244   \n",
        "...       ...         ...         ...       ...        ...       ...      ...   \n",
-       "7995  594.836 -167.020935  120.190155 -0.995324  13.627166  0.029047 -0.02381   \n",
-       "7996  594.876 -166.724564  119.735992 -0.996354  13.422322  0.042470 -0.02686   \n",
-       "7997  594.916 -166.433014  119.288536 -0.997426  13.224626  0.034855 -0.02117   \n",
-       "7998  594.956 -166.146347  118.847389 -0.998371  13.019039  0.037049 -0.01664   \n",
-       "7999  594.996 -165.864517  118.413170 -0.998917  12.801240  0.051131 -0.01218   \n",
+       "3123  594.836 -139.352295  351.868683  0.924539  13.627166  0.029047 -0.02381   \n",
+       "3124  594.876 -139.648666  351.414520  0.923508  13.422322  0.042470 -0.02686   \n",
+       "3125  594.916 -139.940216  350.967064  0.922436  13.224626  0.034855 -0.02117   \n",
+       "3126  594.956 -140.226883  350.525917  0.921492  13.019039  0.037049 -0.01664   \n",
+       "3127  594.996 -140.508713  350.091698  0.920945  12.801240  0.051131 -0.01218   \n",
        "\n",
        "         steer         D  real_ax  real_ay  \n",
-       "0     0.001073 -0.419252  -0.2477   0.5202  \n",
-       "1     0.001056 -0.419129  -0.1003   0.1653  \n",
-       "2     0.001126 -0.413074  -0.0117   0.0054  \n",
-       "3     0.001246 -0.449214  -0.0894  -0.0761  \n",
-       "4     0.001262 -0.433608  -0.0839   0.5010  \n",
+       "0     0.000719 -0.254461  -0.2095   0.2194  \n",
+       "1     0.001095 -0.271038   0.3387  -0.4859  \n",
+       "2     0.001457 -0.306820  -0.2400  -0.1717  \n",
+       "3     0.001808 -0.256734   0.3106  -0.4829  \n",
+       "4     0.002118 -0.289739  -0.1916  -0.7657  \n",
        "...        ...       ...      ...      ...  \n",
-       "7995 -0.002339 -4.265322  -5.6695  -0.0485  \n",
-       "7996 -0.001983 -4.274560  -4.9157   0.0203  \n",
-       "7997 -0.001433 -4.278177  -5.2175  -0.7925  \n",
-       "7998 -0.000933 -4.222267  -5.6539   0.3684  \n",
-       "7999 -0.000684 -4.165312  -5.8320   0.4159  \n",
+       "3123 -0.002387 -4.272755  -5.6695  -0.0485  \n",
+       "3124 -0.001995 -4.264626  -4.9157   0.0203  \n",
+       "3125 -0.001501 -4.272468  -5.2175  -0.7925  \n",
+       "3126 -0.001037 -4.236550  -5.6539   0.3684  \n",
+       "3127 -0.000687 -4.170835  -5.8320   0.4159  \n",
        "\n",
-       "[8000 rows x 11 columns]"
+       "[3128 rows x 11 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "honest-worst",
+   "id": "fiscal-imagination",
    "metadata": {},
    "source": [
     "# Plotting to Find Bug"
@@ -382,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "baking-equipment",
+   "id": "impossible-backing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "wanted-password",
+   "id": "european-extent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "worthy-gazette",
+   "id": "played-authority",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "acquired-visit",
+   "id": "regional-horror",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "attractive-shopping",
+   "id": "cellular-clearing",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -486,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "reduced-observation",
+   "id": "official-kruger",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "lesbian-celebration",
+   "id": "beautiful-picture",
    "metadata": {},
    "outputs": [
     {
@@ -536,8 +528,6 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "plt.plot(df['time'][:num_pts], df['psi'][:num_pts], 'violet', label='psi')\n",
     "plt.legend(loc='best')\n",
     "# plt.axis('equal')\n",
@@ -549,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bright-tablet",
+   "id": "pacific-mouse",
    "metadata": {},
    "outputs": [],
    "source": []
