Got data figured out at least

--- a/Data.ipynb
+++ b/Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 296,
    "id": "facial-button",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 302,
    "id": "optional-numbers",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 303,
    "id": "elect-victor",
    "metadata": {},
    "outputs": [],
@@ -68,19 +68,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 304,
    "id": "usual-adrian",
    "metadata": {},
    "outputs": [],
    "source": [
     "# atime = 275.036 # start the data\n",
-    "atime = time[60000]\n",
+    "atime = time[69000]\n",
     "btime = 595"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 305,
    "id": "located-english",
    "metadata": {},
    "outputs": [],
@@ -114,19 +114,19 @@
     "        # multiple by 9.8 to get m/s^2\n",
     "        values *= 9.8\n",
     "    elif label == 'psi':\n",
-    "        values += math.pi * 1.12\n",
+    "        values += math.pi / 5\n",
     "    elif label == 'y':\n",
     "        values -= values[0]\n",
     "\n",
     "    \n",
     "    df[labels[i]] = time_cut_data[:,1] # now extract the actual column value\n",
     "    \n",
-    "df.to_csv('20210201_parsed_run3_data.csv')"
+    "df.to_csv('20210201_parsed_run3_data_shifted.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 293,
    "id": "instrumental-separate",
    "metadata": {},
    "outputs": [
@@ -167,73 +167,73 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>469.916</td>\n",
+       "      <td>0.00</td>\n",
        "      <td>-0.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>2.521288</td>\n",
-       "      <td>20.914034</td>\n",
-       "      <td>0.033644</td>\n",
-       "      <td>-0.01642</td>\n",
-       "      <td>0.000719</td>\n",
-       "      <td>-0.254461</td>\n",
-       "      <td>-0.2095</td>\n",
-       "      <td>0.2194</td>\n",
+       "      <td>3.499894</td>\n",
+       "      <td>24.332863</td>\n",
+       "      <td>-0.023040</td>\n",
+       "      <td>-0.11949</td>\n",
+       "      <td>-0.014684</td>\n",
+       "      <td>3.551053</td>\n",
+       "      <td>3.3113</td>\n",
+       "      <td>-3.5641</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>469.956</td>\n",
-       "      <td>-0.689575</td>\n",
-       "      <td>0.474304</td>\n",
-       "      <td>2.520757</td>\n",
-       "      <td>20.925581</td>\n",
-       "      <td>0.040599</td>\n",
-       "      <td>-0.01548</td>\n",
-       "      <td>0.001095</td>\n",
-       "      <td>-0.271038</td>\n",
-       "      <td>0.3387</td>\n",
-       "      <td>-0.4859</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.163952</td>\n",
+       "      <td>-0.962761</td>\n",
+       "      <td>3.494652</td>\n",
+       "      <td>24.472927</td>\n",
+       "      <td>-0.034802</td>\n",
+       "      <td>-0.13544</td>\n",
+       "      <td>-0.014433</td>\n",
+       "      <td>3.575200</td>\n",
+       "      <td>3.4339</td>\n",
+       "      <td>-4.0205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>469.996</td>\n",
-       "      <td>-1.379486</td>\n",
-       "      <td>0.948502</td>\n",
-       "      <td>2.520299</td>\n",
-       "      <td>20.920303</td>\n",
-       "      <td>0.033280</td>\n",
-       "      <td>-0.01133</td>\n",
-       "      <td>0.001457</td>\n",
-       "      <td>-0.306820</td>\n",
-       "      <td>-0.2400</td>\n",
-       "      <td>-0.1717</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.334312</td>\n",
+       "      <td>-1.930534</td>\n",
+       "      <td>3.489452</td>\n",
+       "      <td>24.632114</td>\n",
+       "      <td>-0.041853</td>\n",
+       "      <td>-0.13655</td>\n",
+       "      <td>-0.014029</td>\n",
+       "      <td>3.637095</td>\n",
+       "      <td>3.4398</td>\n",
+       "      <td>-3.3295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>470.036</td>\n",
-       "      <td>-2.069550</td>\n",
-       "      <td>1.422333</td>\n",
-       "      <td>2.519940</td>\n",
-       "      <td>20.923943</td>\n",
-       "      <td>0.040129</td>\n",
-       "      <td>0.00004</td>\n",
-       "      <td>0.001808</td>\n",
-       "      <td>-0.256734</td>\n",
-       "      <td>0.3106</td>\n",
-       "      <td>-0.4829</td>\n",
+       "      <td>0.12</td>\n",
+       "      <td>0.510620</td>\n",
+       "      <td>-2.903419</td>\n",
+       "      <td>3.484165</td>\n",
+       "      <td>24.775465</td>\n",
+       "      <td>-0.017320</td>\n",
+       "      <td>-0.12540</td>\n",
+       "      <td>-0.013431</td>\n",
+       "      <td>3.665690</td>\n",
+       "      <td>3.6229</td>\n",
+       "      <td>-3.4558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>470.076</td>\n",
-       "      <td>-2.759766</td>\n",
-       "      <td>1.896225</td>\n",
-       "      <td>2.519658</td>\n",
-       "      <td>20.925726</td>\n",
-       "      <td>0.038360</td>\n",
-       "      <td>-0.00244</td>\n",
-       "      <td>0.002118</td>\n",
-       "      <td>-0.289739</td>\n",
-       "      <td>-0.1916</td>\n",
-       "      <td>-0.7657</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.692703</td>\n",
+       "      <td>-3.881210</td>\n",
+       "      <td>3.479049</td>\n",
+       "      <td>24.928864</td>\n",
+       "      <td>-0.027705</td>\n",
+       "      <td>-0.13807</td>\n",
+       "      <td>-0.012920</td>\n",
+       "      <td>3.775975</td>\n",
+       "      <td>3.0353</td>\n",
+       "      <td>-3.3768</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -250,11 +250,11 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3123</th>\n",
-       "      <td>594.836</td>\n",
-       "      <td>-139.352295</td>\n",
-       "      <td>351.868683</td>\n",
-       "      <td>0.924539</td>\n",
+       "      <th>2123</th>\n",
+       "      <td>84.92</td>\n",
+       "      <td>103.677887</td>\n",
+       "      <td>220.218719</td>\n",
+       "      <td>-2.042521</td>\n",
        "      <td>13.627166</td>\n",
        "      <td>0.029047</td>\n",
        "      <td>-0.02381</td>\n",
@@ -264,11 +264,11 @@
        "      <td>-0.0485</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3124</th>\n",
-       "      <td>594.876</td>\n",
-       "      <td>-139.648666</td>\n",
-       "      <td>351.414520</td>\n",
-       "      <td>0.923508</td>\n",
+       "      <th>2124</th>\n",
+       "      <td>84.96</td>\n",
+       "      <td>103.381516</td>\n",
+       "      <td>219.764557</td>\n",
+       "      <td>-2.043551</td>\n",
        "      <td>13.422322</td>\n",
        "      <td>0.042470</td>\n",
        "      <td>-0.02686</td>\n",
@@ -278,11 +278,11 @@
        "      <td>0.0203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3125</th>\n",
-       "      <td>594.916</td>\n",
-       "      <td>-139.940216</td>\n",
-       "      <td>350.967064</td>\n",
-       "      <td>0.922436</td>\n",
+       "      <th>2125</th>\n",
+       "      <td>85.00</td>\n",
+       "      <td>103.089966</td>\n",
+       "      <td>219.317101</td>\n",
+       "      <td>-2.044623</td>\n",
        "      <td>13.224626</td>\n",
        "      <td>0.034855</td>\n",
        "      <td>-0.02117</td>\n",
@@ -292,11 +292,11 @@
        "      <td>-0.7925</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3126</th>\n",
-       "      <td>594.956</td>\n",
-       "      <td>-140.226883</td>\n",
-       "      <td>350.525917</td>\n",
-       "      <td>0.921492</td>\n",
+       "      <th>2126</th>\n",
+       "      <td>85.04</td>\n",
+       "      <td>102.803299</td>\n",
+       "      <td>218.875954</td>\n",
+       "      <td>-2.045568</td>\n",
        "      <td>13.019039</td>\n",
        "      <td>0.037049</td>\n",
        "      <td>-0.01664</td>\n",
@@ -306,11 +306,11 @@
        "      <td>0.3684</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3127</th>\n",
-       "      <td>594.996</td>\n",
-       "      <td>-140.508713</td>\n",
-       "      <td>350.091698</td>\n",
-       "      <td>0.920945</td>\n",
+       "      <th>2127</th>\n",
+       "      <td>85.08</td>\n",
+       "      <td>102.521469</td>\n",
+       "      <td>218.441734</td>\n",
+       "      <td>-2.046114</td>\n",
        "      <td>12.801240</td>\n",
        "      <td>0.051131</td>\n",
        "      <td>-0.01218</td>\n",
@@ -321,40 +321,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3128 rows × 11 columns</p>\n",
+       "<p>2128 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         time           x           y       psi         vx        vy        r  \\\n",
-       "0     469.916   -0.000000    0.000000  2.521288  20.914034  0.033644 -0.01642   \n",
-       "1     469.956   -0.689575    0.474304  2.520757  20.925581  0.040599 -0.01548   \n",
-       "2     469.996   -1.379486    0.948502  2.520299  20.920303  0.033280 -0.01133   \n",
-       "3     470.036   -2.069550    1.422333  2.519940  20.923943  0.040129  0.00004   \n",
-       "4     470.076   -2.759766    1.896225  2.519658  20.925726  0.038360 -0.00244   \n",
-       "...       ...         ...         ...       ...        ...       ...      ...   \n",
-       "3123  594.836 -139.352295  351.868683  0.924539  13.627166  0.029047 -0.02381   \n",
-       "3124  594.876 -139.648666  351.414520  0.923508  13.422322  0.042470 -0.02686   \n",
-       "3125  594.916 -139.940216  350.967064  0.922436  13.224626  0.034855 -0.02117   \n",
-       "3126  594.956 -140.226883  350.525917  0.921492  13.019039  0.037049 -0.01664   \n",
-       "3127  594.996 -140.508713  350.091698  0.920945  12.801240  0.051131 -0.01218   \n",
+       "       time           x           y       psi         vx        vy        r  \\\n",
+       "0      0.00   -0.000000    0.000000  3.499894  24.332863 -0.023040 -0.11949   \n",
+       "1      0.04    0.163952   -0.962761  3.494652  24.472927 -0.034802 -0.13544   \n",
+       "2      0.08    0.334312   -1.930534  3.489452  24.632114 -0.041853 -0.13655   \n",
+       "3      0.12    0.510620   -2.903419  3.484165  24.775465 -0.017320 -0.12540   \n",
+       "4      0.16    0.692703   -3.881210  3.479049  24.928864 -0.027705 -0.13807   \n",
+       "...     ...         ...         ...       ...        ...       ...      ...   \n",
+       "2123  84.92  103.677887  220.218719 -2.042521  13.627166  0.029047 -0.02381   \n",
+       "2124  84.96  103.381516  219.764557 -2.043551  13.422322  0.042470 -0.02686   \n",
+       "2125  85.00  103.089966  219.317101 -2.044623  13.224626  0.034855 -0.02117   \n",
+       "2126  85.04  102.803299  218.875954 -2.045568  13.019039  0.037049 -0.01664   \n",
+       "2127  85.08  102.521469  218.441734 -2.046114  12.801240  0.051131 -0.01218   \n",
        "\n",
        "         steer         D  real_ax  real_ay  \n",
-       "0     0.000719 -0.254461  -0.2095   0.2194  \n",
-       "1     0.001095 -0.271038   0.3387  -0.4859  \n",
-       "2     0.001457 -0.306820  -0.2400  -0.1717  \n",
-       "3     0.001808 -0.256734   0.3106  -0.4829  \n",
-       "4     0.002118 -0.289739  -0.1916  -0.7657  \n",
+       "0    -0.014684  3.551053   3.3113  -3.5641  \n",
+       "1    -0.014433  3.575200   3.4339  -4.0205  \n",
+       "2    -0.014029  3.637095   3.4398  -3.3295  \n",
+       "3    -0.013431  3.665690   3.6229  -3.4558  \n",
+       "4    -0.012920  3.775975   3.0353  -3.3768  \n",
        "...        ...       ...      ...      ...  \n",
-       "3123 -0.002387 -4.272755  -5.6695  -0.0485  \n",
-       "3124 -0.001995 -4.264626  -4.9157   0.0203  \n",
-       "3125 -0.001501 -4.272468  -5.2175  -0.7925  \n",
-       "3126 -0.001037 -4.236550  -5.6539   0.3684  \n",
-       "3127 -0.000687 -4.170835  -5.8320   0.4159  \n",
+       "2123 -0.002387 -4.272755  -5.6695  -0.0485  \n",
+       "2124 -0.001995 -4.264626  -4.9157   0.0203  \n",
+       "2125 -0.001501 -4.272468  -5.2175  -0.7925  \n",
+       "2126 -0.001037 -4.236550  -5.6539   0.3684  \n",
+       "2127 -0.000687 -4.170835  -5.8320   0.4159  \n",
        "\n",
-       "[3128 rows x 11 columns]"
+       "[2128 rows x 11 columns]"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 293,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fiscal-imagination",
+   "id": "proved-brother",
    "metadata": {},
    "source": [
     "# Plotting to Find Bug"
@@ -374,7 +374,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "impossible-backing",
+   "id": "julian-tribute",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "european-extent",
+   "id": "concrete-tribune",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "played-authority",
+   "id": "sixth-minister",
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "regional-horror",
+   "id": "peripheral-sample",
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +470,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cellular-clearing",
+   "id": "level-worst",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -478,7 +478,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "official-kruger",
+   "id": "fitting-malta",
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "beautiful-picture",
+   "id": "closed-amplifier",
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pacific-mouse",
+   "id": "dated-election",
    "metadata": {},
    "outputs": [],
    "source": []
